# furl

./: Cargo.toml  README.md  VERSION  develop.js
docs/: LICENSE  index.html
docs/art/: index.html
docs/art/curl/: index.html
docs/lib/wasm/v0/: frw.js  frw_bg.wasm
src/: error.rs  mod.rs
src/app/: app.rs  mod.rs  timer.rs
src/develop/: camera_preset.rs  console.rs  guides_preset.rs  lod_preset.rs  mod.rs  wireframe_preset.rs
src/node/: mod.rs  node_scene.rs
src/renderer_webgl/: mod.rs  renderer.rs  rk_cold.rs  rk_cool.rs  rk_tepid.rs  rk_warm.rs
src/renderer_webgl/shader/: mod.rs  shader_blue_box.rs  shader_furl_basic.rs  shader_guides.rs  shader_rainbow_cactus.rs  shader_red_box.rs  sk_cool.rs
src/renderer_webgl/shader/fragment_shader/: blue.frag  mod.rs  rainbow.frag  red.frag
src/renderer_webgl/shader/shader_program/: mod.rs  shader_program.rs  shader_program_name.rs
src/renderer_webgl/shader/vertex_shader/: box.vert  cactus.vert  furl_basic.vert  guides.vert  mod.rs
src/renderer_webgl/signature/: mod.rs  shader_signature_blue_red_box.rs  shader_signature_furl_basic.rs  shader_signature_guides.rs  shader_signature_rainbow_cactus.rs
src/scene/: mod.rs  scene.rs  scene_alone_furl.rs  scene_blue_red_boxes.rs  scene_empty.rs  scene_rainbow_cactus.rs
src/scene/kit_scene/: mod.rs  pnrg.rs  wow.rs
src/scene/scene_container/: mod.rs  scene_container.rs  scene_container_name.rs
src/shape/: mod.rs  point_3.rs  shape_axes.rs  shape_cube.rs  shape_furl.rs  shape_grids.rs  shape_nubbin.rs  shape_tetrahedron_3.rs  shape_triangle_3.rs
(+16 files in other folders)
